Fixed elevate-on-scroll and contrast-ratio bugs

--- a/src/client/assets/scss/main.scss
+++ b/src/client/assets/scss/main.scss
@@ -5,4 +5,10 @@ body {
     color: inherit;
     text-decoration: none;
   }
+
+  .theme--light.v-tabs > .v-tabs-bar .v-tab:not(.v-tab--active),
+  .theme--light.v-tabs > .v-tabs-bar .v-tab:not(.v-tab--active) > .v-icon,
+  .theme--light.v-tabs > .v-tabs-bar .v-tab--disabled {
+    color: rgba(0, 0, 0, 0.6);
+  }
 }
