--- a/src/client/assets/scss/variables.scss
+++ b/src/client/assets/scss/variables.scss
@@ -1,1 +1,3 @@
-$font-size-root: 20px;
+@import '~vuetify/src/styles/styles.sass';
+
+$root-font-size: 16px;
